--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-multi-carousel": "^2.8.4",
     "react-on-screen": "^2.1.1",
+    "react-player": "^2.14.1",
     "react-router-dom": "^6.21.3",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "^3.0.1",
